<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background1"
    tools:context=".Regjistrohu">
<LinearLayout
    android:id="@+id/Linear"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/Emri"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:hint="@string/Emri"
        android:text="@string/Emri" />
    <EditText
        android:id="@+id/editEmri"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Emri"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <TextView
        android:id="@+id/Mbiemri"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editEmri"
        android:hint="@string/Mbiemri"
        android:text="@string/Mbiemri" />
    <EditText
        android:id="@+id/editMbiemri"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Mbiemri"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <TextView
        android:id="@+id/perdoruesi"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editAge"
        android:hint="@string/Perdoruesi"
        android:text="@string/Perdoruesi" />
    <EditText
        android:id="@+id/editPerdoruesi"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/perdoruesi"
        android:ems="10"
        android:inputType="textPersonName"
        />
    <TextView
        android:id="@+id/Fjalekalimi"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editPerdoruesi"
        android:hint="@string/Fjalekalimi"
        android:text="@string/Fjalekalimi" />

    <EditText
        android:id="@+id/editFjalekalimi"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Fjalekalimi"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/Regjistrohu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp"
        android:text="Regjistrohu" />
</LinearLayout>
</RelativeLayout>